# HFP_AG_MyApp

./: .gitignore  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_hf_msg_set.c  discovery.c  discovery.h  main.c  uart_hdl.c  uart_hdl.h
