idf_component_register(SRCS "app_hf_msg_prs.c"
                            "app_hf_msg_set.c"
                            "bt_app_core.c"
                            "bt_app_hf.c"
                            "gpio_pcm_config.c"
                            "discovery.c"
                            "uart_hdl.c"
                            "main.c"
                    INCLUDE_DIRS ".")
